--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="">
-    <meta name="theme-color" content="#000000" />
+    <link rel="icon" href="icon-port.png">
+    <meta name="theme-color" content="#000000" /> 
     <meta
       name="description"
       content="Web site created using create-react-app"
